[package]
name = "modbus-device-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["rt", "macros", "signal"] }
tokio-modbus = { version = "0.5", default-features = false, features = ["tcp-server-unstable"] }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
anyhow = "1"
thiserror = "1"
